--- a/.gitignore
+++ b/.gitignore
@@ -29,13 +29,4 @@ Session.vim
 
 ### harp ###
 www
-node_modules/borschik
-node_modules/browser-sync
-node_modules/browserify
-node_modules/browserify-shim
-node_modules/hacker-deps
-node_modules/tape
-node_modules/uglify-js
-node_modules/uglifyjs
-node_modules/watchify
-node_modules/watchy
+node_modules/*
